--- a/Michelles_Portfolio/src/Trash/ProjectComponents/ArcadeMedia.css
+++ b/Michelles_Portfolio/src/Trash/ProjectComponents/ArcadeMedia.css
@@ -46,7 +46,6 @@
     display: flex;
     flex-direction: row;
     justify-content: start;
-    overflow-x: auto;
 
     width: 90%;
     gap: 3vw;
@@ -63,13 +62,10 @@
     justify-content: center;
     flex: none;
 
-    width: 20em;
+    width: 10rem;
     padding: 3em;
     gap: 2em;
     border-radius: 1em;
-
-    font-size: 1vh;
-    font-weight: bold;
 
     background-color: rgb(221, 176, 255);
 
@@ -77,32 +73,6 @@
     border-bottom: 0.8em solid rgb(100, 79, 117);
     border-top: 0.3em solid rgb(100, 79, 117);
     border-right: 0.3em solid rgb(100, 79, 117);
-
-}
-
-.viewVideoButton{
-
-    padding: 1vh 1.5vh;
-    font-size: 2.5vh;
-
-    background-color: rgb(216, 100, 255);
-
-    border-left: 0.5vh solid rgb(105, 50, 121);
-    border-bottom: 0.5vh solid rgb(105, 50, 121);
-    border-top: 0.1vh solid rgb(105, 50, 121);
-    border-right: 0.1vh solid rgb(105, 50, 121);
-
-}
-
-.viewVideoButton:hover{
-
-    background-color: rgb(148, 54, 255);
-    color: white;
-
-    border-left: 0.5vh solid rgb(78, 29, 134);
-    border-bottom: 0.5vh solid rgb(78, 29, 134);
-    border-right: 0.1vh solid rgb(78, 29, 134);
-    border-top: 0.1vh solid rgb(78, 29, 134);
 
 }
 
