--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Skills.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Skills.css
@@ -1,11 +1,3 @@
-.skillsScreen{
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-    
-}
-
 .skillsContainer{
 
   position: relative;
@@ -16,9 +8,6 @@
 
   gap: 3rem;
 
-
-  margin-top: 5vh;
-  font-size: 2.5vh;
   padding: 8vh 8vw;
 
   color: white;
@@ -28,14 +17,13 @@
 
 .skill{
 
-  width: 30%;
+  width: 15em;
   padding: 3rem;
-
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  white-space: normal;
   text-align: center;
 
+  border: none;
+  color: rgb(250, 203, 255);
+  background-color: rgba(255, 255, 255, 0);
   box-shadow: 0 0 1vh 0.75vh rgb(216, 63, 233);
 
   transition: transform 0.25s ease;
@@ -45,9 +33,10 @@
 
 .skill:hover{
 
-  transform: scale(1.1);
-
+  color: rgb(255, 255, 255);
   box-shadow: 0 0 1vh 0.75vh rgb(252, 160, 255);
+
+  transform: scale(1.1);
 
 }
 
@@ -67,16 +56,8 @@
     
   .skillsContainer {
 
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: normal;
-    text-align: center;
-
-    margin-top: 3vh;
-    font-size: 2vh;
     padding: 5vw 5vh;
 
-    color: white;
     box-shadow: 0 0 1vh 0.5vh rgb(63, 173, 233);
 
   }
