--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/SkillsComponents/SkillsExpandedCard.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/SkillsComponents/SkillsExpandedCard.css
@@ -1,4 +1,3 @@
-
 .skillExpandedCardFlag{
 
     position: absolute;
@@ -9,55 +8,55 @@
     align-items: center;
     justify-content: center;
 
-    background-color: rgba(103, 225, 255, 0.5);
-    box-shadow: 0 0 2vh 1vh rgb(213, 141, 255);
+    background-color: rgba(103, 121, 255, 0.5);
+    box-shadow: 0 0 2vh 1vh rgb(154, 141, 255);
 
 }
 
 .skillExpandedCard{
 
-    max-height: 50%;
-    max-width: 50%;
+    height: 60%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    padding: 5rem;
+    padding: 2rem 1rem;
     gap: 2rem;
 
     background-color: rgb(230, 147, 255);
-    
-    border-radius: 1vh;
     border-left: 0.8vh solid rgb(40, 55, 74);
     border-bottom: 0.8vh solid rgb(40, 55, 74);
     border-top: 0.3vh solid rgb(40, 55, 74);
     border-right: 0.3vh solid rgb(40, 55, 74);
 
-    box-shadow: 0 0 2vh 1vh rgb(254, 179, 255);
+    box-shadow: 0 0 1vh 0.5vh rgb(254, 203, 255);
 
 }
 
 .skillExpandedCardDescription {
 
-    width: 100%;
+    height: 80%;
+    width: 80%;
     overflow-y: auto;
+    
+    font-weight: bold;
 
     color: black;
-    font-weight: bold;
 
 }
 
 .skillExpandedCardButton {
 
-    color: black;
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
+    padding: 1rem 1.5rem;
+    border-radius: 0.5rem;
 
+    color: black;
     background-color: rgb(137, 210, 255);
-    border-left: 0.4vh solid rgb(40, 55, 74);
-    border-bottom: 0.4vh solid rgb(40, 55, 74);
-    border-top: 0.2vh solid rgb(40, 55, 74);
-    border-right: 0.2vh solid rgb(40, 55, 74);
+    border-left: 0.3rem solid rgb(40, 55, 74);
+    border-bottom: 0.3rem solid rgb(40, 55, 74);
+    border-top: 0.1rem solid rgb(40, 55, 74);
+    border-right: 0.1rem solid rgb(40, 55, 74);
 
 }
 
@@ -65,5 +64,9 @@
 
     color: white;
     background-color: rgb(0, 52, 184);
+    border-left: 0.3rem solid rgb(6, 0, 67);
+    border-bottom: 0.3rem solid rgb(6, 0, 67);
+    border-top: 0.1rem solid rgb(6, 0, 67);
+    border-right: 0.1rem solid rgb(6, 0, 67);
 
 }
