--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Skills.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Skills.css
@@ -8,10 +8,10 @@
 
   gap: 3rem;
 
-  padding: 8vh 8vw;
+  padding: 5rem;
 
   color: white;
-  box-shadow: 0 0 1vh 0.75vh rgb(63, 173, 233);
+  box-shadow: 0 0 1rem 0.5rem rgb(130, 117, 229);
 
 }
 
