--- a/Michelles_Portfolio/src/components/Homescreen/Homescreen.css
+++ b/Michelles_Portfolio/src/components/Homescreen/Homescreen.css
@@ -1,3 +1,24 @@
+.portfolioContentScreen {
+
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+
+  gap: 5rem;
+
+}
+
+.swipingContentScreen {
+
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  gap: 1rem;
+
+}
+
+
 .subTitle{
 
   width: 100%;
@@ -25,9 +46,9 @@
 
 .sectionSwipeButton {
 
-  padding: 1.5rem 2rem;
+  padding: 1rem 1.5rem;
 
-  border-radius: 0.5em;
+  border-radius: 0.3rem;
 
   background-color: rgb(217, 151, 255);
   border-left: 0.6vh solid rgb(99, 0, 156);
