--- a/Michelles_Portfolio/src/components/ProjectScreens/Projectscreen.css
+++ b/Michelles_Portfolio/src/components/ProjectScreens/Projectscreen.css
@@ -1,11 +1,11 @@
 .projectScreen {
 
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  gap: 2rem;
+    gap: 2rem;
 
 }
 
@@ -50,7 +50,7 @@
   border-radius: 0.5rem;
 
   color: rgb(61, 0, 59);
-  background-color: rgb(250, 111, 255);
+  background-color: rgb(252, 168, 255);
   border-left: 0.8vh solid rgb(90, 0, 104);
   border-bottom: 0.8vh solid rgb(90, 0, 104);
   border-top: 0.2vh solid rgb(90, 0, 104);
@@ -129,7 +129,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 10em;
+    width: 12em;
     padding: 2rem;
     gap: 1.5rem;
 
