--- a/Michelles_Portfolio/src/components/Homescreen/Homescreen.css
+++ b/Michelles_Portfolio/src/components/Homescreen/Homescreen.css
@@ -50,6 +50,7 @@
 
   border-radius: 0.3rem;
 
+  color: rgb(88, 0, 98);
   background-color: rgb(217, 151, 255);
   border-left: 0.6vh solid rgb(99, 0, 156);
   border-bottom: 0.6vh solid rgb(99, 0, 156);
