--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Projects.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Projects.css
@@ -77,6 +77,34 @@
 
 }
 
+.goToProjectButton {
+
+  padding: 1.5rem 2rem;
+
+  border-radius: 0.5rem;
+
+  color: rgb(0, 0, 164);
+  background-color: rgb(179, 187, 255);
+  border-left: 0.8vh solid rgb(0, 13, 134);
+  border-bottom: 0.8vh solid rgb(0, 13, 134);
+  border-top: 0.2vh solid rgb(0, 13, 134);
+  border-right: 0.2vh solid rgb(0, 13, 134);
+
+  animation: glowing-shadow-subtitle 3s infinite;
+
+}
+
+.goToProjectButton:hover{
+
+  color: white;
+  background-color: rgb(0, 12, 174);
+  border-left: 0.8vh solid rgb(0, 4, 58);
+  border-bottom: 0.8vh solid rgb(0, 4, 58);
+  border-top: 0.2vh solid rgb(0, 4, 58);
+  border-right: 0.2vh solid rgb(0, 4, 58);
+
+}
+
 
 
 
