--- a/Michelles_Portfolio/src/components/ProjectScreens/Projectscreen.css
+++ b/Michelles_Portfolio/src/components/ProjectScreens/Projectscreen.css
@@ -44,9 +44,9 @@
 
 
 
-.projectButton {
+.projectGeneralButton {
 
-  padding: 1.5rem 2rem;
+  padding: 1rem 1.5rem;
   border-radius: 0.5rem;
 
   color: rgb(61, 0, 59);
@@ -61,7 +61,7 @@
 }
 
 
-.projectButton:hover {
+.projectGeneralButton:hover {
 
     color: white;
     background-color: rgb(129, 0, 133);
@@ -71,19 +71,6 @@
     border-right: 0.2vh solid rgb(41, 0, 47);
 
     animation: glowing-shadow-subtitle 3s infinite;
-
-}
-
-
-.projectBackButton:hover{
-
-  background-color: rgb(82, 93, 255);
-  color: white;
-
-  border-left: 0.8vh solid rgb(29, 33, 95);
-  border-bottom: 0.8vh solid rgb(29, 33, 95);
-  border-top: 0.2vh solid rgb(29, 33, 95);
-  border-right: 0.2vh solid rgb(29, 33, 95);
 
 }
 
@@ -173,6 +160,35 @@
     gap: 3rem;
 
 }
+
+
+.projectLinkButton{
+
+    padding: 1.5rem 2rem;
+    border-radius: 0.5rem;
+    
+    color: rgb(58, 0, 139);
+    background-color: rgb(208, 179, 255);
+    border-left: 0.3rem solid rgb(55, 0, 144);
+    border-bottom: 0.3rem solid rgb(55, 0, 144);
+    border-top: 0.1rem solid rgb(55, 0, 144);
+    border-right: 0.1rem solid rgb(55, 0, 144);
+
+}
+
+
+.projectLinkButton:hover{
+
+  color: white;
+  background-color: rgb(68, 0, 196);
+  border-left: 0.3rem solid rgb(31, 0, 90);
+  border-bottom: 0.3rem solid rgb(31, 0, 90);
+  border-top: 0.1rem solid rgb(31, 0, 90);
+  border-right: 0.1rem solid rgb(31, 0, 90);
+
+}
+
+
 
 
 
