--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Introduction.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Introduction.css
@@ -1,36 +1,36 @@
 .introText{
 
-  color: white;
   text-align: center;
+  color: white;
 
 }
-
 
 .resumeButton {
 
   padding: 1.5rem 2rem;
-
   border-radius: 0.5rem;
 
-  background-color: rgb(111, 255, 255);
-  border-left: 0.8vh solid rgb(0, 104, 104);
-  border-bottom: 0.8vh solid rgb(0, 104, 104);
-  border-top: 0.2vh solid rgb(0, 104, 104);
-  border-right: 0.2vh solid rgb(0, 104, 104);
+  color: rgb(0, 58, 103);
+  background-color: rgb(156, 240, 255);
+  border-left: 0.3rem solid rgb(0, 104, 104);
+  border-bottom: 0.3rem solid rgb(0, 104, 104);
+  border-top: 0.1rem solid rgb(0, 104, 104);
+  border-right: 0.1rem solid rgb(0, 104, 104);
 
-  animation: glowing-shadow-subtitle 3s infinite;
+  animation: glowing-light-turquoise 3s infinite;
 
 }
 
 .resumeButton:hover{
 
-  background-color: rgb(82, 93, 255);
   color: white;
+  background-color: rgb(82, 93, 255);
+  border-left: 0.3rem solid rgb(29, 33, 95);
+  border-bottom: 0.3rem solid rgb(29, 33, 95);
+  border-top: 0.1rem solid rgb(29, 33, 95);
+  border-right: 0.1rem solid rgb(29, 33, 95);
 
-  border-left: 0.8vh solid rgb(29, 33, 95);
-  border-bottom: 0.8vh solid rgb(29, 33, 95);
-  border-top: 0.2vh solid rgb(29, 33, 95);
-  border-right: 0.2vh solid rgb(29, 33, 95);
+  animation: glowing-dark-blue 3s infinite;
 
 }
 
